--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2002-12-20  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2002-12-20  Daniel Yacob  <locales@geez.org>
 
 	* am.po: Updated Amharic translations.
