--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-02  Zbigniew Chyla  <cyba@gnome.pl>
+
+	* pl.po: Updated Polish translation by
+	GNOME PL Team <translators@gnome.pl>.
+
 2002-12-29  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* wa.po: updated Walloon file
