--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-01-22  He Qiangqiang  <carton@linux.net.cn>
+
+        * zh_CN.po: Updated Simplified Chinese translation by
+        Funda Wang <fundawang@en2china.com>.
+
 2003-01-22  Christian Rose  <menthos@menthos.com>
 
 	* mn.po: Added Mongolian translation by
