--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1,49 +1,50 @@
 # yelp zh_CN.po.
 # Copyright (C) 2002 Free Software Foundation, Inc.
 # Zipeco <Zipeco@btamail.net.cn>, 2002.
+# Funda Wang <fundawang@en2china.com>, 2003
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-07-24 11:52+0100\n"
-"Last-Translator: Sun G11n <gnome_int_l10n@ireland.sun.com>\n"
-"Language-Team: Sun G11n <gnome_int_l10n@ireland.sun.com>\n"
+"POT-Creation-Date: 2003-01-10 12:02+0100\n"
+"PO-Revision-Date: 2003-01-22 22:01+0800\n"
+"Last-Translator: Funda Wang <fundawang@en2china.com>\n"
+"Language-Team: zh_CN <i18n-translation@lists.linux.net.cn>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>查找文档中的文字：</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "自动换行(_W)"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "查找文字..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "匹配整个单词(_E)"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "区分大小写(_M)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "下一个(_N)"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "上一个(_P)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -51,9 +52,8 @@ msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
-msgstr "Yelp Factory"
+msgstr "Yelp 工厂"
 
-# SUN CHANGED MESSAGE
 #: src/yelp-main.c:117
 #, c-format
 msgid "Could not activate Yelp: '%s'"
@@ -102,11 +102,11 @@ msgstr "库函数"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
-msgstr "内核过程"
+msgstr "内核例程"
 
 #: src/yelp-man.c:429
 msgid "Applications"
-msgstr "应用"
+msgstr "应用程序"
 
 #: src/yelp-man.c:434
 msgid "Development"
@@ -132,7 +132,6 @@ msgstr "简介"
 msgid "System Administration"
 msgstr "系统管理员"
 
-# SUN NEW TRANSLATION
 #: src/yelp-view-content.c:502 src/yelp-view-index.c:423
 msgid "Loading..."
 msgstr "正在载入..."
@@ -142,25 +141,19 @@ msgid "Section"
 msgstr "章节"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "查找："
+msgstr "查找(_S)："
 
-# SUN CHANGED MESSAGE
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
-#, fuzzy
 msgid "Help Contents"
 msgstr "帮助目录"
 
-# SUN NEW TRANSLATION
 #: src/yelp-view-toc.c:166
 msgid "GNOME - Desktop"
 msgstr "GNOME - 桌面"
 
-# SUN CHANGED MESSAGE
 #: src/yelp-view-toc.c:167
-#, fuzzy
 msgid "Additional documents"
 msgstr "附加文档"
 
@@ -169,17 +162,13 @@ msgid "Manual Pages"
 msgstr "手册页"
 
 #: src/yelp-view-toc.c:169 src/yelp-view-toc.c:549
-#, fuzzy
 msgid "Info Pages"
 msgstr "信息页"
 
-# SUN CHANGED MESSAGE
 #: src/yelp-view-toc.c:366 src/yelp-view-toc.c:550 src/yelp-view-toc.c:749
-#, fuzzy
 msgid "Documents"
 msgstr "文档"
 
-# SUN NEW TRANSLATION
 #: src/yelp-view-toc.c:367 src/yelp-view-toc.c:494 src/yelp-view-toc.c:750
 msgid "Categories"
 msgstr "类别"
@@ -190,15 +179,15 @@ msgstr "手册页"
 
 #: src/yelp-view-toc.c:712
 msgid "GNOME is"
-msgstr ""
+msgstr "GNOME 是"
 
 #: src/yelp-view-toc.c:713
 msgid "Free Software"
-msgstr ""
+msgstr "自由软件"
 
 #: src/yelp-view-toc.c:714
 msgid "(C)"
-msgstr ""
+msgstr "(C)"
 
 #: src/yelp-window.c:163
 msgid "/_File"
@@ -206,23 +195,23 @@ msgstr "/文件(_F)"
 
 #: src/yelp-window.c:164
 msgid "/File/_New window"
-msgstr "/文件/新建窗口(_N)"
+msgstr "/文件(F)/新建窗口(_N)"
 
 #: src/yelp-window.c:165
 msgid "/File/_Close window"
-msgstr "/文件/关闭窗口(_C)"
+msgstr "/文件(F)/关闭窗口(_C)"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/编辑(_E)"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/编辑(E)/在页面中查找(_F)..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/编辑(E)/再次查找(_F)"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
@@ -230,19 +219,19 @@ msgstr "/转到(_G)"
 
 #: src/yelp-window.c:172
 msgid "/Go/_Back"
-msgstr "/转到/后退(_B)"
+msgstr "/转到(G)/后退(_B)"
 
 #: src/yelp-window.c:173
 msgid "/Go/_Forward"
-msgstr "/转到/前进(_F)"
+msgstr "/转到(G)/前进(_F)"
 
 #: src/yelp-window.c:174
 msgid "/Go/_Home"
-msgstr "/转到/起始(_H)"
+msgstr "/转到(G)/首页(_H)"
 
 #: src/yelp-window.c:175
 msgid "/Go/_Index"
-msgstr "/转到/索引(_I)"
+msgstr "/转到(G)/索引(_I)"
 
 #: src/yelp-window.c:177
 msgid "/_Help"
@@ -250,13 +239,12 @@ msgstr "/帮助(_H)"
 
 #: src/yelp-window.c:178
 msgid "/Help/_About"
-msgstr "/帮助/关于(_A)"
+msgstr "/帮助(H)/关于(_A)"
 
 #: src/yelp-window.c:238 src/yelp-window.c:438
 msgid "Help Browser"
 msgstr "帮助浏览器"
 
-# SUN NEW TRANSLATION
 #: src/yelp-window.c:351
 #, c-format
 msgid "The document '%s' does not exist"
@@ -266,11 +254,13 @@ msgstr "文档“%s”不存在"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "Zipeco <Zipeco@btamail.net.cn>"
+msgstr ""
+"Zipeco <Zipeco@btamail.net.cn>, 2002\n"
+"Funda Wang <fundawang@en2china.com>, 2003"
 
 #: src/yelp-window.c:679
 msgid "Help Browser for GNOME 2.0"
-msgstr "GNOME2.0的帮助浏览器"
+msgstr "GNOME 2.0 的帮助浏览器"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -278,7 +268,7 @@ msgstr "后退"
 
 #: src/yelp-window.c:789
 msgid "Show previous page in history"
-msgstr "在历史中显示上一页"
+msgstr "显示历史中的上一页"
 
 #: src/yelp-window.c:800
 msgid "Forward"
@@ -286,15 +276,15 @@ msgstr "前进"
 
 #: src/yelp-window.c:801
 msgid "Show next page in history"
-msgstr "在历史中显示下一页"
+msgstr "显示历史中的下一页"
 
 #: src/yelp-window.c:814
 msgid "Home"
-msgstr "起始"
+msgstr "首页"
 
 #: src/yelp-window.c:815
 msgid "Go to home view"
-msgstr "转到起始视图"
+msgstr "转到首页"
 
 #: src/yelp-window.c:825
 msgid "Index"
@@ -302,43 +292,13 @@ msgstr "索引"
 
 #: src/yelp-window.c:826
 msgid "Search in the index"
-msgstr "在索引中查找"
+msgstr "在索引中搜索"
 
-# SUN CHANGED MESSAGE
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "用 GNOME 获取帮助"
+msgstr "获得 GNOME 的帮助"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "帮助"
 
-#~ msgid "info"
-#~ msgstr "信息"
-
-#~ msgid "man"
-#~ msgstr "man"
-
-#~ msgid "Start page"
-#~ msgstr "起始页"
-
-#~ msgid "/File/_Quit"
-#~ msgstr "/文件/退出(_Q)"
-
-#~ msgid "Manual page sections"
-#~ msgstr "手册页"
-
-#~ msgid "Go back in the history list"
-#~ msgstr "在历史列表中向后找"
-
-#~ msgid "Go forth in the history list"
-#~ msgstr "在历史列表中向前找"
-
-#~ msgid "Overview of contents"
-#~ msgstr "内容简介"
-
-#~ msgid "Search for a phrase in the document"
-#~ msgstr "在文档中查找一个字符串"
-
-#~ msgid "Enter phrase to search for in all documents"
-#~ msgstr "输入在整个文档中要查找的字符串"
