--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-02  Duarte Loreto <happyguy_pt@hotmail.com>
+
+        * pt.po: Updated Portuguese translation.
+
 2003-01-29  Pablo Gonzalo del Campo <pablodc@bigfoot.com>
 
 	* es.po: Fixed a hotkey mistake.
