--- a/po/pt.po
+++ b/po/pt.po
@@ -1,12 +1,12 @@
 # yelp's Portuguese Translation
 # Copyright (C) 2001 Free Software Foundation, Inc.
-# Duarte Loreto <happyguy_pt@hotmail.com>, 2001, 2002
+# Duarte Loreto <happyguy_pt@hotmail.com>, 2001, 2002, 2003
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 2.0\n"
-"POT-Creation-Date: 2002-12-16 09:34+0100\n"
-"PO-Revision-Date: 2002-08-05 02:20+0000\n"
+"Project-Id-Version: 2.2\n"
+"POT-Creation-Date: 2003-02-02 14:42+0000\n"
+"PO-Revision-Date: 2003-02-02 14:50+0000\n"
 "Last-Translator: Duarte Loreto <happyguy_pt@hotmail.com>\n"
 "Language-Team: Portuguese <gnome_pt@yahoogroups.com>\n"
 "MIME-Version: 1.0\n"
@@ -15,35 +15,35 @@ msgstr ""
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "<b>Find text in the document:</b>"
-msgstr ""
+msgstr "<b>Procurar texto no documento:</b>"
 
 #: data/ui/yelp.glade.h:3
 msgid "Automatically _wrap around"
-msgstr ""
+msgstr "Recome_çar automaticamente"
 
 #: data/ui/yelp.glade.h:4
 msgid "Find text..."
-msgstr ""
+msgstr "Procurar texto..."
 
 #: data/ui/yelp.glade.h:5
 msgid "Match _entire word"
-msgstr ""
+msgstr "Coincidir palavra compl_eta"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Match upper/lower case"
-msgstr ""
+msgstr "Coincidir capitalização _maiúscula/minúscula"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Next"
-msgstr ""
+msgstr "Segui_nte"
 
 #: data/ui/yelp.glade.h:8
 msgid "_Previous"
-msgstr ""
+msgstr "_Anterior"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -140,9 +140,8 @@ msgid "Section"
 msgstr "Secção"
 
 #: src/yelp-view-index.c:480
-#, fuzzy
 msgid "_Search for:"
-msgstr "Procurar por:"
+msgstr "_Procurar por:"
 
 #. GList           *seriesids;
 #: src/yelp-view-toc.c:165
@@ -203,15 +202,15 @@ msgstr "/Ficheiro/_Fechar janela"
 
 #: src/yelp-window.c:167
 msgid "/_Edit"
-msgstr ""
+msgstr "/_Editar"
 
 #: src/yelp-window.c:168
 msgid "/Edit/_Find in page..."
-msgstr ""
+msgstr "/Editar/_Procurar na página..."
 
 #: src/yelp-window.c:169
 msgid "/Edit/_Find again"
-msgstr ""
+msgstr "/Editar/_Procurar outra vez"
 
 #: src/yelp-window.c:171
 msgid "/_Go"
