--- a/po/sq.po
+++ b/po/sq.po
@@ -1,18 +1,18 @@
 # Albanian translation of yelp.
-# Copyright (C) 2002 Free Software Foundation, Inc.
-# Laurent Dhima <laurenti@alblinux.net>, 2002.
+# Copyright (C) 2002,2003 Free Software Foundation, Inc.
+# Laurent Dhima <laurenti@alblinux.net>, 2002,2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-01-09 15:51+0100\n"
+"Project-Id-Version: yelp 2.3.x\n"
+"POT-Creation-Date: 2003-04-29 21:48+0200\n"
+"PO-Revision-Date: 2003-04-30 01:54+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
-"Language-Team: albanian < gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
+"Language-Team: albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0.1\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -56,7 +56,7 @@ msgstr "Yelp Factory"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Përcakto directory e cache që duhet përdorur"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -261,8 +261,8 @@ msgid "translator_credits"
 msgstr "Laurent Dhima <laurenti@alblinux.net>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Udhëzues për GNOME 2.0 "
+msgid "A Help Browser for GNOME"
+msgstr "Një Udhëzues i Shfletueshëm për GNOME "
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -303,3 +303,4 @@ msgstr "Merr ndihmë me GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ndihmë"
+
