--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-05  Paul Duffy <dubhthach@frink.nuigalway.ie>
+
+        * ga.po: Updated Irish translation.
+
 2003-05-02  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
