--- a/po/ga.po
+++ b/po/ga.po
@@ -2,11 +2,10 @@
 # Copyright (C) 2003 Free Software Foundation, Inc.
 # Paul Duffy <dubhthach@frink.nuigalway.ie>, 2003.
 #
-
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
-"POT-Creation-Date: 2003-05-01 18:48+0100\n"
+"POT-Creation-Date: 2003-05-05 14:46+0100\n"
 "PO-Revision-Date: 2003-05-01 18:50+0100\n"
 "Last-Translator: Paul Duffy <dubhthach@frink.nuigalway.ie>\n"
 "Language-Team: Irish\n"
@@ -48,7 +47,7 @@ msgstr "_Roimh Ré"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
-msgstr ""
+msgstr "Yelp"
 
 #: src/GNOME_Yelp.server.in.h:2
 msgid "Yelp Factory"
@@ -65,7 +64,7 @@ msgstr ""
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr ""
+msgstr "Theip ar oscailte de fhuinneog nua"
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -74,7 +73,7 @@ msgstr "X11"
 
 #: src/yelp-man.c:301 src/yelp-man.c:332 src/yelp-man.c:390 src/yelp-man.c:417
 msgid "OpenSSL"
-msgstr "SSLOscailte"
+msgstr "OpenSSL"
 
 #: src/yelp-man.c:306
 msgid "Termcap"
