--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-06 Paul Duffy <dubhthach@frink.nuigalway.ie>
+
+        * ga.po: Added Irish Translation.
+
 2003-05-05  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Added Serbian translation by
