--- a/po/ja.po
+++ b/po/ja.po
@@ -2,13 +2,14 @@
 # Copyright (C) 2002-2003 Free Software Foundation, Inc.
 # This file is distributed under the same license as the Yelp package.
 # Takeshi Aihana <aihana@gnome.gr.jp>, 2002-2003.
-# 
+# KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>, 203.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
-"POT-Creation-Date: 2003-04-10 00:35+0900\n"
-"PO-Revision-Date: 2003-04-10 00:34+0900\n"
-"Last-Translator: Takeshi Aihana <aihana@gnome.gr.jp>\n"
+"POT-Creation-Date: 2003-05-08 23:03+0900\n"
+"PO-Revision-Date: 2003-05-08 23:08+0900\n"
+"Last-Translator: KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -258,11 +259,13 @@ msgstr "ドキュメント '%s' は存在しません"
 #. * will shop up in the "about" box
 #: src/yelp-window.c:675
 msgid "translator_credits"
-msgstr "Takeshi AIHANA <aihana@gnome.gr.jp>"
+msgstr ""
+"Takeshi AIHANA <aihana@gnome.gr.jp>\n"
+"KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>"
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "GNOME 2.0 向けのヘルプ・ブラウザ"
+msgid "A Help Browser for GNOME"
+msgstr "GNOME 向けのヘルプ・ブラウザ"
 
 #: src/yelp-window.c:788
 msgid "Back"
@@ -298,7 +301,7 @@ msgstr "目次の中から検索します"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
-msgstr "GNOME 2.0 向けヘルプ・ブラウザ"
+msgstr "GNOME 向けヘルプ・ブラウザ"
 
 #: yelp.desktop.in.h:2
 msgid "Help"
