--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,13 @@
+2003-05-08  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
+
+        * es.po: Updated Spanish translation by
+                 Juan Manuel GarcÃ­a Molina <juanma_gm@wanadoo.es>
+
 2003-05-08  KAMAGASAKO Masatoshi  <emerald@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
 
-2003-05-06  Danilo ©egan  <dsegan@gmx.net>
+2003-05-06  Danilo Â©egan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Added Serbian translation by 
 	http://Prevod.org/.
@@ -72,13 +77,13 @@
 2003-03-10  Christian Rose  <menthos@menthos.com>
 
 	* eo.po: Added Esperanto translation by
-	Jo?ƒ?«l Brich <joel.brich@laposte.net>.
+	Jo?Âƒ?Â«l Brich <joel.brich@laposte.net>.
 
 2003-03-08  Gil "Dolfin" Osher <dolfin@rpg.org.il>
 
 	* he.po: Updated Hebrew translation.
 
-2003-02-25  Sam??ºel J??³n Gunnarsson <sammi@techattack.nu>
+2003-02-25  Sam??Âºel J??Â³n Gunnarsson <sammi@techattack.nu>
 
 	* is.po: Added Icelandic translation.
 
@@ -171,7 +176,7 @@
 
 	* vi.po: Updated Vietnamese file
 
-2003-01-18  T??ƒ??µivo Leedj??ƒ?¢?‚?¬rv  <toivo@linux.ee>
+2003-01-18  T??Âƒ??Âµivo Leedj??Âƒ?Â¢?Â‚?Â¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -340,7 +345,7 @@
 
 2002-11-25  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???¥l) translation.
+	* no.po: Updated Norwegian (bokm???Â¥l) translation.
 	
 2002-11-25  Yanko Kaneti  <yaneti@declera.com>
 
@@ -357,7 +362,7 @@
 
 2002-10-29  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???¯?????“) translation.
+	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
 	
 2002-10-21  Andras Timar  <timar@gnome.hu>
 
@@ -375,10 +380,10 @@
 
 	* ro.po: added ( thanks to Mugurel Tudor <mugurelu@go.ro> )
 
-2002-08-27  Germ???¯?????“ Poo Caamao <gpoo@ubiobio.cl>
+2002-08-27  Germ???Â¯?????Â“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc???¯?????“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
 
 2002-08-05  Duarte Loreto <happyguy_pt@hotmail.com>
 
@@ -444,7 +449,7 @@
 
 2002-07-02  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???¯?????“) translation.
+	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
 	
 2002-06-30  Zbigniew Chyla  <chyla@gnome.pl>
 
@@ -455,7 +460,7 @@
 
 	* ru.po: updated Russian translation.
 
-2002-06-30  Tivo Leedj???¯?????“v  <toivo@linux.ee>
+2002-06-30  Tivo Leedj???Â¯?????Â“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -515,7 +520,7 @@
 
 	* ca.po: Catalan fix.
 
-2002-06-06  Tivo Leedj???¯?????“v  <toivo@linux.ee>
+2002-06-06  Tivo Leedj???Â¯?????Â“v  <toivo@linux.ee>
 
 	* et.po: Fix.
 
@@ -523,14 +528,14 @@
 
 	* sv.po: Fix.
 
-2002-06-02  Germ???¯?????“ Poo Caamao <gpoo@ubiobio.cl>
+2002-06-02  Germ???Â¯?????Â“ Poo Caamao <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from 
-	Juan Manuel Garc???¯?????“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
 
-2002-06-01  Carlos Perell Mar???¯?????“ <carlos@gnome-db.org>
+2002-06-01  Carlos Perell Mar???Â¯?????Â“ <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc???¯?????“ Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
 
 2002-06-01  Jesus Bravo Alvarez  <jba@pobox.com>
 
@@ -581,7 +586,7 @@
 
 2002-05-07  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???¯?????“) translation.
+	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
 	
 2002-05-07  Christophe Merlet  <christophe@merlet.net>
 
@@ -613,10 +618,10 @@
 
 	* vi.po: Updated Vietnamese file
 
-2002-05-01  Germ???¯?????“ Poo-Caamao  <gpoo@ubiobio.cl>
+2002-05-01  Germ???Â¯?????Â“ Poo-Caamao  <gpoo@ubiobio.cl>
 
 	* es.po: Updated Spanish translation from
-	Juan Manuel Garc???¯?????“ Molina <juanma_gm@wanadoo.es>
+	Juan Manuel Garc???Â¯?????Â“ Molina <juanma_gm@wanadoo.es>
 
 2002-05-01  Mikael Hallendal  <micke@codefactory.se>
 
@@ -635,13 +640,13 @@
 	* vi.po: Added Vietnamese file
 	* wa.po: Updated Walloon file
 
-2002-04-26  Tivo Leedj???¯?????“v  <toivo@linux.ee>
+2002-04-26  Tivo Leedj???Â¯?????Â“v  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
 2002-04-23  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm???¯?????“) translation.
+	* no.po: Updated Norwegian (bokm???Â¯?????Â“) translation.
 	
 2002-04-22  Takeshi Aihana <aihana@gnome.gr.jp>
 
@@ -711,7 +716,7 @@
 
 	* sv.po: Updated Swedish translation.
 
-2002-04-11  T-A???ƒ$)B???µivo Leedj-A???ƒ$)B??¢?‚?¬rv  <toivo@linux.ee>
+2002-04-11  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -772,7 +777,7 @@
 
 	* hu.po: Updated Hungarian translation
 
-2002-03-17  T-A???ƒ$)B???µivo Leedj-A???ƒ$)B??¢?‚?¬rv <toivo@linux.ee>
+2002-03-17  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv <toivo@linux.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -792,10 +797,10 @@
 
 	* nl.po: Updated dutch translation (Tino Meinen)
 
-2002-03-06  Germ-A???ƒ$)B??n Poo-Caama-A???ƒ$)B???±o <gpoo@ubiobio.cl>
+2002-03-06  Germ-A???Âƒ$)B??n Poo-Caama-A???Âƒ$)B???Â±o <gpoo@ubiobio.cl>
 
 	* es.po: Updated spanish translation from
-		Juan Manuel Garc-A???ƒ$)B???­a Molina <juanma_gm@wanadoo.es>
+		Juan Manuel Garc-A???Âƒ$)B???Â­a Molina <juanma_gm@wanadoo.es>
 
 2002-03-04  Christian Meyer  <chrisime@gnome.org>
 
@@ -817,7 +822,7 @@
 
 2002-03-03  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2002-03-03  Ole Laursen  <olau@hardworking.dk>
 
@@ -851,7 +856,7 @@
 
 	* de.po: Updated German translation.
 
-2002-03-01  T-A???ƒ$)B???µivo Leedj-A???ƒ$)B??¢?‚?¬rv  <leedjarv@interest.ee>
+2002-03-01  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -868,7 +873,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-28  T-A???ƒ$)B???µivo Leedj-A???ƒ$)B??¢?‚?¬rv  <leedjarv@interest.ee>
+2002-02-28  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <leedjarv@interest.ee>
 
 	* et.po: Updated Estonian translation.
 
@@ -899,7 +904,7 @@
 
 2002-02-21  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Committed updated Turkish translation by G-A???ƒ$)B???¶rkem.
+	* tr.po: Committed updated Turkish translation by G-A???Âƒ$)B???Â¶rkem.
 
 2002-02-20  Simos Xenitellis  <simos@hellug.gr>
 
@@ -914,7 +919,7 @@
 	* pl.po: Updated Polish translation by
 	GNOME PL Team <translators@gnome.pl>.
 
-2002-02-17  T-A???ƒ$)B???µivo Leedj-A???ƒ$)B??¢?‚?¬rv  <leedjarv@interest.ee>
+2002-02-17  T-A???Âƒ$)B???Âµivo Leedj-A???Âƒ$)B??Â¢?Â‚?Â¬rv  <leedjarv@interest.ee>
 
 	* et.po: Added Estonian translation.
 
@@ -932,19 +937,19 @@
 
 2002-02-12  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2002-02-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2002-02-08  Duarte Loreto <happyguy_pt@hotmail.com>
 
         * pt.po: Updated Portuguese translation.
 
-2002-02-04  Carlos Perell-A???ƒ$)B???³ Mar-A???ƒ$)B???­n <carlos@gnome-db.org>
+2002-02-04  Carlos Perell-A???Âƒ$)B???Â³ Mar-A???Âƒ$)B???Â­n <carlos@gnome-db.org>
 
-	* es.po: Updated by Juan Manuel Garc-A???ƒ$)B???­a Molina <juanma_gm@wanadoo.es>
+	* es.po: Updated by Juan Manuel Garc-A???Âƒ$)B???Â­a Molina <juanma_gm@wanadoo.es>
 
 2002-02-03  Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>
 
@@ -966,7 +971,7 @@
 
 2002-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2002-01-30  Zbigniew Chyla  <cyba@gnome.pl>
 
@@ -992,7 +997,7 @@
 
 2002-01-27  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2002-01-27  Christian Rose  <menthos@menthos.com>
 
@@ -1029,7 +1034,7 @@
     
 2002-01-11  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2002-01-10  Christian Rose  <menthos@menthos.com>
 
@@ -1056,9 +1061,9 @@
 
 2002-01-06  Fatih Demir <kabalak@gtranslator.org>
 
-	* tr.po: Added Turkish translation by G-A???ƒ$)B???¶rkem Cetin.
+	* tr.po: Added Turkish translation by G-A???Âƒ$)B???Â¶rkem Cetin.
 
-2002-01-06  Germ-A???ƒ$)B??n Poo-Caama-A???ƒ$)B???±o <gpoo@ubiobio.cl>
+2002-01-06  Germ-A???Âƒ$)B??n Poo-Caama-A???Âƒ$)B???Â±o <gpoo@ubiobio.cl>
 
 	* es.po: Added spanish translation.
 
@@ -1076,7 +1081,7 @@
 
 2001-12-16  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Updated Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Updated Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2001-12-13  Stanislav Visnovsky  <visnovsky@nenya.ms.mff.cuni.cz>
 
@@ -1092,7 +1097,7 @@
 
 2001-12-10  Kjartan Maraas  <kmaraas@gnome.org>
 
-	* no.po: Added Norwegian (bokm-A???ƒ$)B???¥l) translation.
+	* no.po: Added Norwegian (bokm-A???Âƒ$)B???Â¥l) translation.
 	
 2001-12-10  Richard Hult  <rhult@codefactory.se>
 
@@ -1131,7 +1136,7 @@
 
 	* de.po: Added German translation.
 
-2001-12-04  Carlos Perell-A???ƒ$)B???³ Mar-A???ƒ$)B???­n <carlos@gnome-db.org>
+2001-12-04  Carlos Perell-A???Âƒ$)B???Â³ Mar-A???Âƒ$)B???Â­n <carlos@gnome-db.org>
 
 	* POTFILES.in: Removed missing files.
 
