--- a/po/es.po
+++ b/po/es.po
@@ -1,18 +1,19 @@
+# translation of yelp.HEAD.po to Spanish
 # yelp spanish .po file.
-# Copyright (C) 2001 Free Software Foundation, Inc.
-# Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002.
+# Copyright (C) 2001,2003 Free Software Foundation, Inc.
+# Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002,2003.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNOME 2.0\n"
+"Project-Id-Version: yelp.HEAD\n"
 "POT-Creation-Date: 2003-04-07 19:16+0200\n"
-"PO-Revision-Date: 2003-01-23 23:42-0300\n"
-"Last-Translator: Pablo Gonzalo del Campo <pablodc@bigfoot.com>\n"
+"PO-Revision-Date: 2003-05-08 18:00+0200\n"
+"Last-Translator: Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 0.9.6\n"
+"X-Generator: KBabel 1.0.1\n"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -56,7 +57,7 @@ msgstr "Fábrica Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Defina qué dir de caché usar"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -305,3 +306,4 @@ msgstr "Obtener ayuda con GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ayuda"
+
