--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-10 Hasbullah bin Pit <sebol@ikhlas.com
+
+	* ms.po: Updated Malay translation.
+
 2003-05-09  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
