--- a/po/ms.po
+++ b/po/ms.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Yelp\n"
-"POT-Creation-Date: 2003-04-07 19:16+0200\n"
+"POT-Creation-Date: 2003-05-11 08:39+0800\n"
 "PO-Revision-Date: 2002-12-13 11:19+0800\n"
 "Last-Translator: Hasbullah Bin Pit <sebol@ikhlas.com>\n"
 "Language-Team: Bahasa Melayu <gabai-penyumbang@lists.sourceforge.net>\n"
@@ -56,7 +56,7 @@ msgstr "Kilang Yelp"
 
 #: src/yelp-main.c:94
 msgid "Define which cache dir to use"
-msgstr ""
+msgstr "Takrif direktori cache untuk digunakan"
 
 #: src/yelp-main.c:128
 #, c-format
@@ -265,8 +265,8 @@ msgstr ""
 "Hasbullah Bin Pit <sebol@ikhlas.com>, Merlimau."
 
 #: src/yelp-window.c:679
-msgid "Help Browser for GNOME 2.0"
-msgstr "Pelungsur Fail Bantuan GNOME 2.0"
+msgid "A Help Browser for GNOME"
+msgstr "Pelungsur Bantuan bagi GNOME"
 
 #: src/yelp-window.c:788
 msgid "Back"
