--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-12  Abel Cheung  <maddog@linux.org.hk>
+
+	* l10n.xml: Added traditional Chinese translation.
+
 2003-04-03  Mikael Hallendal  <micke@codefactory.se>
        
         * yelp-customization.xsl: 
